# fast_linang

./: Cargo.toml  README.md  arithmetic.rs  eigen.rs  expm.rs  lib.rs  matrix.rs
.cargo/: config.toml
benches/: core.rs  skebob
src/: eigen.rs  lu.rs
tests/: arithmetic_tests.rs  lu_tests.rs  lu_tests_gen.py  matrix_gen.ipynb  skebob  stress_tests.rs
tests/common/: gen_matrix.rs  lapack.rs  mod.rs
