[package]
name = "fast_linalg"
version = "0.2.0"
edition = "2024"

[dependencies]

[dev-dependencies]
arbtest   = "0.3"
arbitrary = "1"
criterion = { version = "0.5", features = ["html_reports"] }
nalgebra  = "0.34"
faer      = "0.24"
rand      = "0.8"
rand_distr = "0.4"


[[bench]]
name = "core"
harness = false